--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">台彩在线</string>
+    <string name="app_name">3K彩电台</string>
 
+
+    <string name="welcome_text">欢迎使用3K彩电台!</string>
 
 
     <string name="header_hint_refresh_normal">下拉刷新</string>
